# whoosh_rag_mcp

./: .gitignore  .vscodeignore  LICENSE  README.md  extension.js  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
references/: README.md
src/whoosh_rag_mcp/: __init__.py  doc_retriever.py  mcp_server.py
src/whoosh_rag_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
